@@ -1,2 +1,3 @@
 __NEXT__
 new: #141 - Finished implementation of Helm SDK API (`add` and `remove` methods)
+new: #115 - Reindex all packages in whole repo
